DataTables to AngularTS